Добавлены стили; добавлено модальное окно

--- a/Journals.App/Journals.App.Main/Resources/HtmlTemplates.resx
+++ b/Journals.App/Journals.App.Main/Resources/HtmlTemplates.resx
@@ -119,9 +119,12 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="bookmarkPost" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>bookmarkPost.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>HtmlTemplates\bookmarkPost.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="master" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>master.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>HtmlTemplates\master.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="post" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>HtmlTemplates\post.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
